external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_range_fail.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/parser/spec_parsing_range_fail.move:3:19
  │
3 │       let _ = 1u8 .. 2;
  │                   ^^ Specification blocks are deprecated and are no longer used
